--- a/exercise_2/index.html
+++ b/exercise_2/index.html
@@ -8,6 +8,7 @@
 <body>
     <!-- DOM method textcontent -->
     <p id="change"> Hello world! </p>
+    <h1 id="title">Hello Ai!</h1>
     <script src="script.js"></script>
 </body>
 </html>
